WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266959
[IFC][Geometry] convertBoxGeometryForWritingMode incorrectly flips vertical decoration
https://bugs.webkit.org/show_bug.cgi?id=266959
Summary
[IFC][Geometry] convertBoxGeometryForWritingMode incorrectly flips vertical d...
zalan
Reported
2023-12-31 19:59:09 PST
ssia
Attachments
[fast-cq]Patch
(5.49 KB, patch)
2023-12-31 20:04 PST
,
zalan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2023-12-31 20:04:22 PST
Created
attachment 469250
[details]
[fast-cq]Patch
EWS
Comment 2
2024-01-02 06:48:45 PST
Committed
272567@main
(cbab3edde4fb): <
https://commits.webkit.org/272567@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469250
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-01-02 06:49:16 PST
<
rdar://problem/120369246
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug