Cherry-pick cbab3edde4fb. rdar://120369246

[IFC][Geometry] convertBoxGeometryForWritingMode incorrectly flips vertical decoration
    https://bugs.webkit.org/show_bug.cgi?id=266959

    Reviewed by Antti Koivisto.

    In vertical writing mode (physical) horizontal decoration needs directional flipping (lr vs. rl) and not the vertical one (vertical in logical sense though).

    * Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
    (WebCore::Layout::convertBoxGeometryForWritingMode):

    Canonical link: https://commits.webkit.org/272567@main

Canonical link: https://commits.webkit.org/272448.212@safari-7618-branch